add href for link icon delete

--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
         </p>
 
         <ul id="incomplete-tasks">
-            <li>
-                    <button class="delete">x</button>
-                <label>Welly Andriani</label>
+            <li><label>Welly Andriani</label>
+                <button class="delete" href="#"></button>
             </li>
         </ul>
     </div>
