--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
     <div class="container">
+        <div class="nav">
         <h1>TODO LIST APP</h1>
         <p>
             <input id="new-task" class="input" type="text" name="name" placeholder="myname">
@@ -23,6 +24,7 @@
                 <button class="delete" href="#"></button>
             </li>
         </ul>
+    </div>
     </div>
 
 
